--- a/src/Components/Help/Help.module.css
+++ b/src/Components/Help/Help.module.css
@@ -10,7 +10,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin-left: 50px;
+    margin-left: 200px;
 }
 
 .help__info_text p{
@@ -156,6 +156,10 @@
 }
 
 @media(max-width:800px){
+    .help__info_text{
+        margin: 0 auto;
+    }
+
     .question_title{
         font-size: 13px;
     }
