--- a/src/Components/Nav/Nav.module.css
+++ b/src/Components/Nav/Nav.module.css
@@ -166,10 +166,11 @@
         flex-direction: column;
         top: 0px;
         left: 0;
-        width: 50%;
+        width: 25%;
         height: 100%;
         padding-top: 40px;
-        background: #FFEFBA;
+        background: rgb(0,254,255);
+        background: linear-gradient(90deg, rgba(255,232,188,1) 0%, rgba(255,250,241,1) 100%);
         transform: translateX(-100%);
         transition: transform 0.5s; 
     }
@@ -180,6 +181,15 @@
     
     .block__list li {
         list-style-type: none;
+        padding-top: 25px;
+    }
+
+    .block__list a{
+        justify-content: center;
+    }
+
+    .block__list a::before{
+        content: none;
     }
 }
 
@@ -220,6 +230,10 @@
         display: none;
     }
 
+    .block__list li {
+        font-size: 11px;
+    }
+
     .block__user{
         height: 30px;
     }
@@ -242,5 +256,13 @@
     .menuBtn{
         top: 25px;
         left: 25px;
+    }
+    
+    .block__list li {
+        font-size: 10px;
+    }
+
+    .block__list a{
+        justify-content: flex-start;
     }
 }
