--- a/src/Components/Cart/Cart.module.css
+++ b/src/Components/Cart/Cart.module.css
@@ -6,7 +6,7 @@
 .cart__info{
     display: flex;
     justify-content: space-between;
-    margin-top: 70px;
+    margin-top: 40px;
 }
 
 .cart__info>button{
@@ -23,7 +23,7 @@
 .cart__search{
     display: flex;
     justify-content: space-between;
-    margin-top: 60px;
+    margin-top: 40px;
 }
 
 .cart__searchOrderBtn>button{
@@ -85,7 +85,6 @@
     top: 18px;
     background: none;
     cursor: pointer;
-
 }
 
 .cart__searchTrack>button{
@@ -104,12 +103,180 @@
     background-color: #ededed;
 }
 
+.cart__table_wrapper{
+    margin: 10px auto 0px auto;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    height: 300px;
+    background-color: #C0C9D7;
+}
+
 .cart__table{
-    margin-top: 60px;
-    border: 2px solid black;
+    margin-top: 10px;
+}
+
+.cart__table thead tr th{
+    padding: 20px;
+}
+
+.cart__table thead button{
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    border: 0;
+    background-color: transparent;
+    cursor: pointer;
+    font-weight: bold;
+    font-size: 18px;
 }
 
 .cart__table th,
 .cart__table td{
-    border: 2px solid black;
+    text-align: center;
+}
+
+.cart__table td{
+    padding: 10px;
+}
+
+.cart__table td{
+    border-bottom: 1px solid rgb(210, 210, 210);
+}
+
+.cart__table tbody tr{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.cart__table tbody tr:hover{
+    background-color: #ededed;
+}
+
+@media(max-width:1024px){
+    .cart__table thead button{
+        font-size: 15px;
+    }
+}
+
+@media(max-width:800px){
+    .cart__searchOrderBtn>button{
+        border: 0;
+        background: none; 
+        font-weight: bold;
+        font-size: 18px;
+        border-bottom: 1px solid #000;
+        padding-bottom: 20px;
+        padding-right: 25px;
+        position: relative;
+        cursor: pointer;
+    }
+
+    .cart__searchTrack>button{
+        width: 47px;
+    }
+
+    .cart__searchTrack_input_deleteText{
+        right: 8px;
+        top: 8px;
+    }
+
+    .cart__table_wrapper{
+        height: 200px;
+        border: 1px solid black;
+    }
+
+    .cart__table{
+        margin: 0 auto;
+    }
+
+    .cart__table td{
+        font-size: 12px;
+        padding: 5px;
+    }
+
+    .cart__table thead tr th{
+        padding: 10px;
+    }
+}
+
+@media(max-width:768px){
+    .cart__table_wrapper{
+        width: 100%;
+        overflow-x: scroll;
+    }
+
+    .cart__table thead button{
+        font-size: 13px;
+    }
+}
+
+@media(max-width:425px){
+    .cart__info{
+        display: flex;
+        flex-direction: column;
+    }
+
+    .cart__info h2{
+        font-size: 17px;
+        margin-bottom: 10px;
+    }
+
+    .cart__search{
+        display: flex;
+        justify-content: space-between;
+        margin-top: 40px;
+    }
+
+    .cart__search{
+        flex-direction: column;
+    }
+    .cart__searchOrderBtn{
+        margin-bottom: 10px;
+    }
+
+    .cart__searchTrack_input_deleteText{
+        right: 4px;
+        top: 2px;
+    }
+}
+
+@media(max-width:375px){
+    .cart__searchTrack{
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .cart__searchOrderBtn>button{
+        font-size: 15px;
+    }
+
+    .cart__searchTrack_input input{
+        border-radius: 120px;
+        border: 1px solid #C0C9D7;
+        padding: 20px;
+        width: 95%;
+        font-size: 15px;
+    }
+
+    .cart__searchTrack_input_deleteText{
+        right: 17px;
+        top: 15px;
+    }
+
+    .cart__searchTrack>button{
+        width: 35px;
+    }
+
+    .cart__table_wrapper{
+        height: 143px;
+    }
+
+    .cart__table thead tr th{
+        padding: 5px;
+    }
+}
+
+@media(max-width:320px){
+    .cart__info h2{
+        font-size: 14px;
+    }
 }
