--- a/src/Components/Cart/Cart.module.css
+++ b/src/Components/Cart/Cart.module.css
@@ -9,7 +9,7 @@
     margin-top: 40px;
 }
 
-.cart__info>button{
+.cart__info button{
     border: 0;
     background-color: #00C97B;
     border-radius: 36px;
