--- a/src/Components/Cart/Cart.module.css
+++ b/src/Components/Cart/Cart.module.css
@@ -54,7 +54,8 @@
 }
 
 .cart__searchTrack{
-    display: flex;
+    /* display: flex; */
+    display: none;
     gap: 20px;
 }
 
@@ -115,11 +116,23 @@
     margin-top: 10px;
 }
 
+.cart__table th,
+.cart__table td{
+    text-align: center;
+}
+
+.cart__table td{
+    padding: 10px;
+    border-bottom: 1px solid rgb(210, 210, 210);
+}
+
 .cart__table thead tr th{
     padding: 20px;
+    font-size: 18px;
 }
 
 .cart__table thead button{
+    margin-top: 2px;
     display: flex;
     align-items: center;
     gap: 5px;
@@ -128,19 +141,6 @@
     cursor: pointer;
     font-weight: bold;
     font-size: 18px;
-}
-
-.cart__table th,
-.cart__table td{
-    text-align: center;
-}
-
-.cart__table td{
-    padding: 10px;
-}
-
-.cart__table td{
-    border-bottom: 1px solid rgb(210, 210, 210);
 }
 
 .cart__table tbody tr{
@@ -152,8 +152,13 @@
 }
 
 @media(max-width:1024px){
-    .cart__table thead button{
+    .cart__table thead button,
+    .cart__table thead tr th{
         font-size: 15px;
+    }
+
+    .cart__table thead button{
+        margin-top: 0px;
     }
 }
 
@@ -204,7 +209,8 @@
         overflow-x: scroll;
     }
 
-    .cart__table thead button{
+    .cart__table thead button,
+    .cart__table thead tr th{
         font-size: 13px;
     }
 }
